--- a/templates/main.xml
+++ b/templates/main.xml
@@ -1,18 +1,7 @@
 <fest:template xmlns:fest="http://fest.mail.ru">
-	<h1>Test</h1>
-	<p>
-		<span class='js-login'>
-			Login
-		</span>
-	</p>
-	<p>
-		<span class='js-scoreboard'>
-			Scoreboard
-		</span>
-	</p>
-	<p>
-		<span class='js-start-game'>
-			Game
-		</span>
-	</p>
+	<h1>TicTacToe</h1>
+	
+	<p><a href='#login'> Login </a></p>
+	<p><a href='#scoreboard'> Scoreboard </a></p>
+	<p><a href='#game'> Game </a></p>
 </fest:template>
