--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,1 +1,13 @@
 /* TODO */
+.battlefield{
+  width:306px;
+  height: 306px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.battlefield_cell{
+  width: 100px;
+  height: 100px;
+  float: left;
+  border: 1px solid black;
+}
