--- a/static/css/scss/_buttons.scss
+++ b/static/css/scss/_buttons.scss
@@ -3,13 +3,13 @@
 button{
     font-family: $main_font;
 }
-.button__menu_button {
+.menu_button {
     border: none;
     padding: 10px;
     margin: 10px;
     width: 300px;
     height: 60px;
-    color: white;
+    color: $white;
     border-radius: 3px;
     background: $main_green;
     box-shadow: 0 10px 10px transparentize($black-half, 0);
@@ -23,7 +23,7 @@ button{
     margin: 10px;
     width: 300px;
     height: 60px;
-    color: white;
+    color: $white;
     border-radius: 3px;
     background: $main_green;
     box-shadow: 0 10px 10px transparentize($black-half, 0);
@@ -35,7 +35,7 @@ button{
     padding: 10px;
     margin: 10px;
     font-size: 20px;
-    color: white;
+    color: $white;
     border-color: $white;
     border-radius: 2px;
     background: $main_green;
