--- a/static/css/scss/_consts.scss
+++ b/static/css/scss/_consts.scss
@@ -4,4 +4,5 @@ $main_green: #40C781;
 $names_color: #333;
 $main_font: 'Comic Sanc MS';
 $white-half: rgba(255, 255, 255, 0.5);
+$green-half: rgba(64, 199, 129, 0.5);
 $black-half: rgba(0, 0, 0, 0.5);
