--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,2 +1,118 @@
-button{font-family:"Comic Sanc MS"}.button__menu_button{border:none;padding:10px;margin:10px;width:300px;height:60px;color:white;border-radius:3px;background:#40C781;box-shadow:0 10px 10px rgba(0,0,0,0.5);font-size:25px;font-weight:700}.button__submit_button{border:none;padding:10px;margin:10px;width:300px;height:60px;color:white;border-radius:3px;background:#40C781;box-shadow:0 10px 10px rgba(0,0,0,0.5);font-size:25px;font-weight:700}.button__back_button{padding:10px;margin:10px;font-size:20px;color:white;border-color:#fff;border-radius:2px;background:#40C781;position:absolute;right:50px}.div__battlefield{border:10px solid rgba(255,255,255,0.5);width:510px;height:510px;margin:50px auto auto}.div__battlefield__cell{border:5px solid rgba(255,255,255,0.5);width:160px;height:160px;float:left}body{color:#fff;background:gray;font-family:"Comic Sanc MS"}div{text-align:center}input{padding:10px;font-size:30px;border:10px solid rgba(255,255,255,0.5);background:rgba(255,255,255,0.5);color:#333}table{background:#40C781;border-collapse:collapse;margin:50px auto auto;padding:5px;max-width:600px;max-height:600px;width:100%;box-shadow:0 10px 10px rgba(0,0,0,0.5);border:10px solid rgba(255,255,255,0.5);font-size:25px;font-weight:700}th{background:#40C781;padding:24px;border-bottom:10px solid rgba(255,255,255,0.5);text-shadow:0 1px 1px rgba(0,0,0,0.5)}td{background:rgba(255,255,255,0.5);padding:10px;color:#333}
-/*# sourceMappingURL=main.css.map */
+button {
+  font-family: "Comic Sanc MS"; }
+
+.button_menu {
+  display: block;
+  padding: 10px;
+  margin: 25px auto 25px auto;
+  width: 400px;
+  height: 60px;
+  color: white;
+  border-radius: 3px;
+  background: #40c781;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center; }
+
+.button_submit {
+  display: block;
+  border: none;
+  padding: 10px;
+  margin: 25px auto 25px auto;
+  width: 200px;
+  height: 60px;
+  color: white;
+  border-radius: 3px;
+  background: #40c781;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  font-size: 25px;
+  font-weight: 700;
+  text-align: center; }
+
+.button_right {
+  padding: 10px;
+  margin: 10px;
+  font-size: 20px;
+  color: white;
+  border: 2px solid white;
+  background: gray;
+  position: absolute;
+  right: 50px;
+  top: 70px;
+  text-align: center; }
+
+.button_logout {
+  padding: 10px;
+  margin: 10px;
+  font-size: 20px;
+  color: white;
+  border: 2px solid white;
+  background: rgba(64, 199, 129, 0.5);
+  position: absolute;
+  right: 50px;
+  top: 70px;
+  font-weight: 700;
+  text-align: center; }
+
+.div__battlefield {
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  width: 510px;
+  height: 510px;
+  margin: 50px auto auto; }
+
+.div__battlefield__cell {
+  border: 5px solid rgba(255, 255, 255, 0.5);
+  width: 160px;
+  height: 160px;
+  float: left; }
+
+.input_authorization {
+  display: block;
+  margin: 0px auto 25px auto;
+  padding: 10px;
+  font-size: 30px;
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  background: rgba(255, 255, 255, 0.5);
+  color: #333333; }
+
+body {
+  color: white;
+  background: gray;
+  font-family: "Comic Sanc MS"; }
+
+h1 {
+  text-align: center; }
+
+label {
+  display: block;
+  text-align: center; }
+
+table {
+  background: #40c781;
+  border-collapse: collapse;
+  margin: 50px auto auto;
+  padding: 5px;
+  max-width: 600px;
+  max-height: 600px;
+  width: 100%;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  font-size: 25px;
+  font-weight: 700; }
+
+th {
+  background: #40c781;
+  padding: 24px;
+  /*border-radius: 0px;*/
+  border-bottom: 10px solid rgba(255, 255, 255, 0.5);
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+
+td {
+  background: rgba(255, 255, 255, 0.5);
+  /*border-radius: 7px;*/
+  padding: 10px;
+  color: #333333; }
+
+a {
+  text-decoration: none; }
