--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,118 +1,175 @@
-button {
-  font-family: "Comic Sanc MS"; }
-
 .button_menu {
   display: block;
-  padding: 10px;
   margin: 25px auto 25px auto;
+  padding: 10px;
   width: 400px;
   height: 60px;
+  background: #40c781;
   color: white;
   border-radius: 3px;
-  background: #40c781;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   font-size: 40px;
   font-weight: 700;
   text-align: center; }
 
+.button_logout {
+  display: block;
+  margin: 10px;
+  padding: 10px;
+  background: gray;
+  color: white;
+  border: none;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+  font-weight: 500;
+  text-align: center; }
+
+.button_back {
+  margin: 10px;
+  padding: 10px;
+  background: gray;
+  color: white;
+  border: 2px solid white;
+  font-size: 20px;
+  text-align: center; }
+
 .button_submit {
   display: block;
-  border: none;
-  padding: 10px;
   margin: 25px auto 25px auto;
+  padding: 10px;
   width: 200px;
   height: 60px;
-  color: white;
-  border-radius: 3px;
   background: #40c781;
+  color: white;
+  border: none;
+  border-radius: 3px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   font-size: 25px;
   font-weight: 700;
   text-align: center; }
 
-.button_right {
-  padding: 10px;
-  margin: 10px;
-  font-size: 20px;
-  color: white;
-  border: 2px solid white;
-  background: gray;
-  position: absolute;
-  right: 50px;
-  top: 70px;
-  text-align: center; }
-
-.button_logout {
-  padding: 10px;
-  margin: 10px;
-  font-size: 20px;
-  color: white;
-  border: 2px solid white;
-  background: rgba(64, 199, 129, 0.5);
-  position: absolute;
-  right: 50px;
-  top: 70px;
-  font-weight: 700;
-  text-align: center; }
-
-.div__battlefield {
-  border: 10px solid rgba(255, 255, 255, 0.5);
-  width: 510px;
-  height: 510px;
-  margin: 50px auto auto; }
-
-.div__battlefield__cell {
-  border: 5px solid rgba(255, 255, 255, 0.5);
-  width: 160px;
-  height: 160px;
-  float: left; }
-
 .input_authorization {
   display: block;
   margin: 0px auto 25px auto;
   padding: 10px;
-  font-size: 30px;
-  border: 10px solid rgba(255, 255, 255, 0.5);
   background: rgba(255, 255, 255, 0.5);
-  color: #333333; }
+  color: #333333;
+  border: 10px solid rgba(255, 255, 255, 0.5);
+  font-size: 30px; }
+
+.div_menu {
+  margin: 110px auto auto auto; }
+
+.div_title {
+  position: absolute;
+  left: 0;
+  top: 25px;
+  right: 0;
+  margin: auto;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center; }
+
+.div_logout {
+  position: absolute;
+  top: 0px;
+  right: 5%; }
+
+.div_user-info {
+  position: absolute;
+  top: 0px;
+  right: 200px;
+  margin: 10px;
+  text-align: right;
+  font-size: 30px; }
+
+.div_back {
+  position: absolute;
+  top: 80px;
+  left: 10%; }
+
+.div_player-info {
+  position: absolute;
+  top: 170px;
+  right: 10%;
+  text-align: center; }
+
+.div_enemy-info {
+  position: absolute;
+  top: 170px;
+  left: 10%;
+  text-align: center; }
+
+.div_game-status {
+  position: absolute;
+  top: 25px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center; }
+
+.div_battlefield {
+  position: absolute;
+  top: 110px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 318px;
+  height: 310px;
+  border: 2px solid white; }
+
+.div-battlefield-cell {
+  display: inline; }
+
+.div-scoreboard {
+  position: absolute;
+  top: 110px;
+  left: 0;
+  right: 0;
+  margin: auto; }
+
+.img_battlefield-sign {
+  padding: 0px 3px 0px 3px;
+  margin: auto; }
 
 body {
   color: white;
   background: gray;
   font-family: "Comic Sanc MS"; }
 
-h1 {
-  text-align: center; }
-
 label {
   display: block;
   text-align: center; }
 
+a {
+  text-decoration: none; }
+
 table {
-  background: #40c781;
-  border-collapse: collapse;
-  margin: 50px auto auto;
+  margin: auto;
   padding: 5px;
   max-width: 600px;
   max-height: 600px;
   width: 100%;
+  background: #40c781;
+  border-collapse: collapse;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   border: 10px solid rgba(255, 255, 255, 0.5);
   font-size: 25px;
-  font-weight: 700; }
+  font-weight: 700;
+  text-align: center; }
 
 th {
-  background: #40c781;
   padding: 24px;
-  /*border-radius: 0px;*/
+  background: #40c781;
   border-bottom: 10px solid rgba(255, 255, 255, 0.5);
+  /*border-radius: 0px;*/
   text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
 
 td {
-  background: rgba(255, 255, 255, 0.5);
-  /*border-radius: 7px;*/
   padding: 10px;
-  color: #333333; }
-
-a {
-  text-decoration: none; }
+  background: rgba(255, 255, 255, 0.5);
+  color: #333333;
+  /*border-radius: 7px;*/
+  text-align: center; }
