--- a/static/css/scss/_button.scss
+++ b/static/css/scss/_button.scss
@@ -1,62 +1,56 @@
 @import "_consts";
 
-button{
-    font-family: $main_font;
-}
 .button_menu {
     display: block;
-    padding: 10px;
     margin: 25px auto 25px auto;
+    padding: 10px;
     width: 400px;
     height: 60px;
+    background: $main_green;
     color: white;
     border-radius: 3px;
-    background: $main_green;
     box-shadow: 0 10px 10px transparentize($black-half, 0);
     font-size: 40px;
     font-weight: 700;
     text-align: center;
 }
-
+.button_logout {
+    display: block;
+    margin: 10px;
+    padding: 10px;
+    background: $main_gray;
+    color: white;
+    border: none;
+    box-shadow: 0 10px 10px transparentize($black-half, 0);
+    font-size: 20px;
+    font-weight: 500;
+    text-align: center;
+}
+.button_back {
+    margin: 10px;
+    padding: 10px;
+    background: $main_gray;
+    color: white;
+    border: 2px solid $white;
+    font-size: 20px;
+    text-align: center;
+}
 .button_submit {
     display: block;
-    border: none;
-    padding: 10px;
     margin: 25px auto 25px auto;
+    padding: 10px;
     width: 200px;
     height: 60px;
-    color: white;
-    border-radius: 3px;
     background: $main_green;
+    color: white;
+    border: none;
+    border-radius: 3px;
     box-shadow: 0 10px 10px transparentize($black-half, 0);
     font-size: 25px;
     font-weight: 700;
     text-align: center;
 }
 
-.button_right {
-    padding: 10px;
-    margin: 10px;
-    font-size: 20px;
-    color: white;
-    border: 2px solid $white;
-    background: $main_gray;
-    position: absolute;
-    right: 50px;
-    top: 70px;
-    text-align: center;
-}
 
-.button_logout {
-    padding: 10px;
-    margin: 10px;
-    font-size: 20px;
-    color: white;
-    border: 2px solid $white;
-    background: transparentize($green-half, 0);
-    position: absolute;
-    right: 50px;
-    top: 70px;
-    font-weight: 700;
-    text-align: center;
-}
+
+
