--- a/static/css/scss/main.scss
+++ b/static/css/scss/main.scss
@@ -6,6 +6,7 @@
 @import "blocks/b-battle-status/b-battle-status";
 @import "blocks/b-battlefield/b-battlefield";
 @import "blocks/b-player-info/b-player-info";
+@import "blocks/b-logout/b-logout";
 
 body {
     color: white;
