--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,21 +1,22 @@
 .b-page-top {
-  margin: 0 25px 0 25px;
+  margin: 0 20px 0 20px;
   display: inline; }
 
 .b-page-top__title {
+  padding: 10px;
   text-align: left;
-  font-size: 50px;
+  font-size: 35px;
   font-weight: bold; }
 
 .b-page-top__user-info {
   float: right;
-  margin: 10px;
+  margin: 7px 10px 0 0;
   text-align: right;
   font-size: 30px;
   font-weight: bold; }
 
 .b-menu {
-  margin: 50px auto auto auto; }
+  margin: 55px auto auto auto; }
 
 .b-menu__button {
   display: block;
@@ -25,19 +26,20 @@
   height: 60px;
   background: #40c781;
   color: white;
+  border: none;
   border-radius: 3px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   font-size: 40px;
   font-weight: 700;
+  font-family: "Comic Sanc MS";
   text-align: center; }
 
 .b-back {
-  float: left;
-  width: 100%;
-  margin-top: -30px; }
+  position: relative;
+  top: 10px; }
 
 .b-back__button {
-  margin: 30px;
+  margin: 1%;
   padding: 10px;
   background: gray;
   color: white;
@@ -46,7 +48,7 @@
   text-align: center; }
 
 .b-user-form {
-  margin: 50px auto auto auto; }
+  margin: 55px auto auto auto; }
 
 .b-user-form__input {
   display: block;
@@ -76,30 +78,44 @@
   margin: 50px auto auto auto;
   padding: 10px; }
 
-.b-battle-status {
+.b-battle-status__notification {
+  position: relative;
   text-align: center;
-  margin: 50px 25% 10px 25%;
+  margin: 0 25% 0 25%;
   color: #40c781;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
-  font-size: 35px;
+  border-radius: 2px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+  font-size: 30px;
   font-weight: bold; }
 
-.b-battle-new-game-button {
-  position: absolute;
-  top: 360px;
-  left: 38%;
-  right: 38%;
+.b-battle-status__game-result {
+  position: inherit;
+  text-align: center;
+  margin: -250px 30% 150px 30%;
+  font-size: 40px;
+  font-weight: bold;
+  background-clip: gray;
+  color: #40c781;
+  border: 2px solid;
+  border-radius: 2px; }
+
+.b-battle-status__button {
+  margin: 10px;
+  border: none;
   padding: 10px;
   background: #40c781;
   color: white;
+  border-radius: 2px;
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
   font-size: 20px;
-  text-align: center; }
+  font-weight: bold; }
 
 .b-battlefield {
-  margin: 50px auto auto auto;
+  margin: 55px auto auto auto;
   width: 318px;
-  height: 315px; }
+  height: 315px;
+  text-align: center;
+  display: flex; }
 
 .b-battlefield__cell {
   display: inline; }
@@ -107,16 +123,16 @@
 .b-battlefield__picture {
   margin: 0 2px 0 2px; }
 
-.b-player-info {
-  position: absolute;
-  top: 210px;
-  text-align: center; }
-
 .b-player-info__current-player {
-  left: 20%; }
+  max-width: 200px;
+  margin: auto 0 0 10%;
+  float: left;
+  text-align: left; }
 
 .b-player-info__enemy-player {
-  right: 20%; }
+  margin: auto 10% 0 0;
+  float: right;
+  text-align: right; }
 
 .b-logout {
   text-align: right; }
@@ -131,6 +147,9 @@
   font-size: 20px;
   font-weight: 500;
   text-align: center; }
+
+.b-page-body {
+  margin-top: 1%; }
 
 body {
   color: white;
@@ -171,3 +190,6 @@ td {
   color: #333333;
   /*border-radius: 7px;*/
   text-align: center; }
+
+h1 {
+  margin: 0; }
