--- a/static/css/scss/blocks/b-back/b-back.scss
+++ b/static/css/scss/blocks/b-back/b-back.scss
@@ -1,14 +1,12 @@
 @import "../../consts";
 
 .b-back {
-  float: left;
-//  display: block;
-  width: 100%;
-  margin-top: -30px;
+  position: relative;
+  top: 10px;
 }
 
 .b-back__button {
-  margin: 30px;
+  margin: 1%;
   padding: 10px;
   background: $main_gray;
   color: white;
