--- a/static/css/scss/blocks/b-battle-status/b-battle-status.scss
+++ b/static/css/scss/blocks/b-battle-status/b-battle-status.scss
@@ -1,23 +1,36 @@
 @import "../../consts";
 
-.b-battle-status {
+.b-battle-status__notification {
+    position: relative;
     text-align: center;
-    margin: 50px 25% 10px 25%;
+    margin: 0 25% 0 25%;
     color: $main_green;
-    box-shadow: 0 10px 10px transparentize($black-half, 0);
-    font-size: 35px;
+    border-radius: 2px;
+    box-shadow: 0 5px 5px transparentize($black-half, 0);
+    font-size: 30px;
     font-weight: bold;
 }
 
-.b-battle-new-game-button {
-    position: absolute;
-    top: 360px;
-    left: 38%;
-    right: 38%;
+.b-battle-status__game-result {
+    position: inherit;
+    text-align: center;
+    margin: -250px 30% 150px 30%;
+    font-size: 40px;
+    font-weight: bold;
+    background: $main_gray;
+    color: $main_green;
+    border: 2px solid;
+    border-radius: 2px;
+}
+
+.b-battle-status__button {
+    margin: 10px;
+    border: none;
     padding: 10px;
     background: $main_green;
     color: white;
+    border-radius: 2px;
     box-shadow: 0 10px 10px transparentize($black-half, 0);
     font-size: 20px;
-    text-align: center;
+    font-weight: bold;
 }
