--- a/static/css/scss/blocks/b-menu/b-menu.scss
+++ b/static/css/scss/blocks/b-menu/b-menu.scss
@@ -1,7 +1,7 @@
 @import "../../consts";
 
 .b-menu {
-  margin: 50px auto auto auto;
+  margin: 55px auto auto auto;
 }
 
 .b-menu__button {
@@ -12,9 +12,11 @@
   height: 60px;
   background: $main_green;
   color: white;
+  border: none;
   border-radius: 3px;
   box-shadow: 0 10px 10px transparentize($black-half, 0);
   font-size: 40px;
   font-weight: 700;
+  font-family: $main_font;
   text-align: center;
 }
