--- a/static/css/scss/main.scss
+++ b/static/css/scss/main.scss
@@ -8,6 +8,7 @@
 @import "blocks/b-player-info/b-player-info";
 @import "blocks/b-logout/b-logout";
 @import "blocks/b-page-boby/b-page-body";
+@import "blocks/b-submit-button/b-submit-button";
 
 body {
     color: white;
